[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/ui/LevelObjectiveUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="LevelObjectiveUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="WaveControl" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WaveLabel" type="Label" parent="WaveControl"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -136.0
margin_top = 181.0
margin_right = 137.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 1 )
text = "Wave 1"
align = 1

[node name="ObjectiveUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ObjectiveLabel" type="Label" parent="ObjectiveUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -525.0
margin_top = 220.0
margin_right = -160.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 2 )
text = "Defeat all enemies (0/2)"

[node name="TimerUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TimerLabel" type="Label" parent="TimerUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -525.0
margin_top = 239.0
margin_right = -127.0
margin_bottom = 306.0
custom_fonts/font = SubResource( 2 )
text = "Time elapsed: = 00:00"
